<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FormRegisterStudy.SchoolinformationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/back_button_layout_sch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/back_button_description"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/btn_back_sch"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    app:srcCompat="@drawable/back_svgrepo_com" />

                <TextView
                    android:id="@+id/textView_back_sch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/kantumruy2"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textColor="@color/color_app"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView_title_sch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/kantumruy2"
                android:gravity="center"
                android:text="@string/registration_title"
                android:textColor="@color/color_app"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_subtitle_sch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/kantumruy2"
                android:gravity="center"
                android:text="@string/school_info"
                android:textColor="@color/color_app"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_primary_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/kantumruy2"
                android:text="@string/primary_school"
                android:textColor="@color/color_app"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_primary_school"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/primary_school"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/color_app"
                android:contentDescription="@string/primary_school_description" />

            <TextView
                android:id="@+id/textView_middle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/kantumruy2"
                android:text="@string/middle_school"
                android:textColor="@color/color_app"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_middle_school"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/middle_school"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/color_app"
                android:contentDescription="@string/middle_school_description" />

            <TextView
                android:id="@+id/textView_high_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/kantumruy2"
                android:text="@string/high_school"
                android:textColor="@color/color_app"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_high_school"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/high_school"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/color_app"
                android:contentDescription="@string/high_school_description" />

            <TextView
                android:id="@+id/textView_exam_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/kantumruy2"
                android:text="@string/exam_date"
                android:textColor="@color/color_app"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_exam_date"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/exam_date_hint"
                android:inputType="none"
                android:padding="10dp"
                android:textColor="@color/color_app"
                android:contentDescription="@string/exam_date_description"
                android:focusable="false"
                android:clickable="true" />

            <TextView
                android:id="@+id/textView_grade_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/kantumruy2"
                android:text="@string/grade"
                android:textColor="@color/color_app"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/edit_grade"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/grade_hint"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/color_app"
                android:contentDescription="@string/grade_description" />

            <Button
                android:id="@+id/btn_next_school_info"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/color_app"
                android:fontFamily="@font/kantumruy2"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:contentDescription="@string/next_button_description" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>